--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
 <body>
-
-Hello world!
+<h3>Kacper Durmaj</h3>
+<h3>215712</h3>
+<h3>Programowanie Gier 2D</h3>
+<h3><a href="canvas1.html">Canvas 1</a></h3>
 
 </body>
 </html>
